--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,8 +24,7 @@ version = "2.1.0"
 
 [workspace.dependencies]
 # normal dependencies
-near-sdk-4 = { package = "near-sdk", version = "4.1.1", default-features = false }
-near-sdk-5 = { package = "near-sdk", version = "5.0.0", default-features = false }
+near-sdk = { version = "5.1.0", default-features = false }
 near-sdk-contract-tools-macros = { version = "=2.1.0", path = "./macros" }
 thiserror = "1"
 once_cell = "1"
@@ -46,31 +45,19 @@ pretty_assertions = "1"
 tokio = "1"
 
 [dependencies]
-near-sdk-4 = { workspace = true, default-features = false, features = [
-  "legacy",
-], optional = true }
-near-sdk-5 = { workspace = true, default-features = false, features = [
-  "legacy",
-], optional = true }
+near-sdk = { workspace = true, default-features = false, features = ["legacy"] }
 near-sdk-contract-tools-macros.workspace = true
 once_cell.workspace = true
 thiserror.workspace = true
 
 [dev-dependencies]
-near-sdk-4 = { workspace = true, default-features = false, features = [
-  "unit-testing",
-  "legacy",
-] }
-near-sdk-5 = { workspace = true, default-features = false, features = [
+near-sdk = { workspace = true, default-features = false, features = [
   "unit-testing",
   "legacy",
 ] }
 
 [features]
-default = ["near-sdk-5"]
-near-sdk-4 = ["dep:near-sdk-4"]
-near-sdk-5 = ["dep:near-sdk-5"]
-unstable = ["near-sdk-4?/unstable", "near-sdk-5?/unstable"]
+unstable = ["near-sdk/unstable"]
 
 [package.metadata.docs.rs]
 features = ["unstable"]
@@ -83,6 +70,3 @@ lto = true
 opt-level = "z"
 overflow-checks = true
 panic = "abort"
-
-[patch.crates-io]
-parity-secp256k1 = { git = "https://github.com/paritytech/rust-secp256k1" }
