--- a/workspaces-tests-utils/Cargo.toml
+++ b/workspaces-tests-utils/Cargo.toml
@@ -5,8 +5,7 @@ edition = "2021"
 publish = false
 
 [dependencies]
-near-sdk-4 = { workspace = true, default-features = false, optional = true }
-near-sdk-5 = { workspace = true, default-features = false, optional = true }
+near-sdk = { workspace = true, default-features = false }
 near-sdk-contract-tools = { path = "../", default-features = false, features = [
     "unstable",
 ] }
@@ -14,7 +13,4 @@ near-workspaces.workspace = true
 pretty_assertions.workspace = true
 
 [features]
-default = ["near-sdk-5"]
-near-sdk-4 = ["dep:near-sdk-4", "near-sdk-contract-tools/near-sdk-4"]
-near-sdk-5 = ["dep:near-sdk-5", "near-sdk-contract-tools/near-sdk-5"]
-unstable = ["near-sdk-4?/unstable", "near-sdk-5?/unstable"]
+unstable = ["near-sdk/unstable"]
