--- a/workspaces-tests/Cargo.toml
+++ b/workspaces-tests/Cargo.toml
@@ -63,8 +63,7 @@ name = "upgrade_old_multisig"
 name = "upgrade_old_raw"
 
 [dependencies]
-near-sdk-4 = { workspace = true, default-features = false, optional = true }
-near-sdk-5 = { workspace = true, default-features = false, optional = true }
+near-sdk = { workspace = true, default-features = false }
 near-sdk-contract-tools = { path = "../", default-features = false, features = [
     "unstable",
 ] }
@@ -82,15 +81,4 @@ workspaces-tests-utils = { path = "../workspaces-tests-utils", default-features 
 ] }
 
 [features]
-default = ["near-sdk-5"]
-near-sdk-4 = [
-    "dep:near-sdk-4",
-    "near-sdk-contract-tools/near-sdk-4",
-    "workspaces-tests-utils/near-sdk-4",
-]
-near-sdk-5 = [
-    "dep:near-sdk-5",
-    "near-sdk-contract-tools/near-sdk-5",
-    "workspaces-tests-utils/near-sdk-5",
-]
-unstable = ["near-sdk-4?/unstable", "near-sdk-5?/unstable"]
+unstable = ["near-sdk/unstable"]
