--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,7 +44,9 @@ pretty_assertions = "1"
 tokio = "1"
 
 [workspace.lints.clippy]
-# pedantic = "warn"
+pedantic = "warn"
+module-name-repetitions = "allow"
+wildcard-imports = "allow"
 
 [workspace.lints.rust]
 missing-docs = "warn"
