--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ version = "3.0.0"
 # normal dependencies
 near-sdk = { version = "5.1.0", default-features = false }
 near-sdk-contract-tools-macros = { version = "=3.0.0", path = "./macros" }
+schemars = "0.8.19"
 thiserror = "1"
 
 # macro dependencies
@@ -53,6 +54,7 @@ missing-docs = "warn"
 [dependencies]
 near-sdk = { workspace = true, default-features = false, features = ["legacy"] }
 near-sdk-contract-tools-macros.workspace = true
+schemars.workspace = true
 thiserror.workspace = true
 
 [dev-dependencies]
